--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,7 @@ name = "pypi"
 
 [packages]
 sanic = "==22.12.0"
-deputydev-core = { ref = "common_changes", git = "ssh://git@github.com/tata1mg/deputydev-core.git" }
+deputydev-core = {path = "/Users/ankitrana/projects/deputydev-core"}
 websockets = "==12.0"
 
 [requires]
