--- a/Pipfile
+++ b/Pipfile
@@ -8,5 +8,10 @@ sanic = "==22.12.0"
 deputydev-core = { ref = "common_changes", git = "ssh://git@github.com/tata1mg/deputydev-core.git" }
 websockets = "==12.0"
 
+[dev-packages]
+flake8 = "==7.1.1"
+black = "==22.12.0"
+isort = "==5.13.2"
+
 [requires]
 python_version = "3.9"
