--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,7 @@ name = "pypi"
 
 [packages]
 sanic = "==22.12.0"
-deputydev-core = { ref = "feature/common-code-separation", git = "ssh://git@github.com/tata1mg/deputydev-core.git" }
+deputydev-core = { ref = "file_dto_benchmark", git = "ssh://git@github.com/tata1mg/deputydev-core.git" }
 websockets = "==12.0"
 
 [dev-packages]
