--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,7 @@ name = "pypi"
 [packages]
 sanic = "==22.12.0"
 deputydev-core = { ref = "file_dto_benchmark", git = "ssh://git@github.com/tata1mg/deputydev-core.git" }
+#deputydev-core = {path = "/Users/anand/Desktop/1mg/bitbucket/deputydev-core"}
 websockets = "==12.0"
 
 [dev-packages]
