--- a/Pipfile
+++ b/Pipfile
@@ -5,8 +5,8 @@ name = "pypi"
 
 [packages]
 sanic = "==22.12.0"
-#deputydev-core = { ref = "DD-progress-bar", git = "ssh://git@github.com/tata1mg/deputydev-core.git" }
-deputydev-core = {path = "/Users/anand/Desktop/1mg/bitbucket/deputydev-core"}
+deputydev-core = { ref = "feature/common-code-separation", git = "ssh://git@github.com/tata1mg/deputydev-core.git" }
+#deputydev-core = {path = "/Users/anand/Desktop/1mg/bitbucket/deputydev-core"}
 websockets = "==12.0"
 
 [dev-packages]
