--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,7 @@ name = "pypi"
 
 [packages]
 sanic = "==22.12.0"
-deputydev-core = { ref = "2.0.0", git = "ssh://git@github.com/tata1mg/deputydev-core.git" }
+deputydev-core = { ref = "DD-441", git = "ssh://git@github.com/tata1mg/deputydev-core.git" }
 websockets = "==12.0"
 fuzzywuzzy = "==0.18.0"
 
