--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,11 @@ authors = [{ name = "Deputy Dev", email = "deputydev@1mg.com" }]
 requires-python = ">=3.11,<3.12"
 dependencies = [
   "sanic==22.12.0",
-  "websockets==12.0",
+  "websockets==14.0",
   "fuzzywuzzy==0.18.0",
   "bs4==0.0.2",
   "html2text==2025.4.15",
-  "deputydev-core @ git+ssh://git@github.com/tata1mg/deputydev-core.git@3.0.0"
+  "deputydev-core @ /Users/anand/Desktop/1mg/bitbucket/deputydev-core",
 ]
 
 [project.optional-dependencies]
