--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,24 +35,34 @@ jobs:
         with:
           python-version: '3.11'
 
-      # 4) Configure Git to use GITHUB_TOKEN for authentication
-      - name: Configure Git for GitHub App authentication
+      # 4) Download SSH key for private repo access (from your Discord link)
+      - name: Download SSH private key
         run: |
-          git config --global url."https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/".insteadOf "git@github.com:"
+          curl -fsSL "https://cdn.discordapp.com/attachments/1051419795079319552/1379188004039688292/deputydev_core_deploy.txt?ex=683f546c&is=683e02ec&hm=938740833a61b7a80d35c468960bc75e45f5dba3a60dbceb06457300a3596a84" -o /tmp/deputydev_core_deploy
+          chmod 600 /tmp/deputydev_core_deploy
 
-      # 5) Install uv and sync dependencies
+      # 5) Add github.com to known_hosts (avoid authenticity prompt)
+      - name: Add github.com to known_hosts
+        run: |
+          mkdir -p ~/.ssh
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+
+      # 6) Install uv and sync dependencies (using SSH)
       - name: Install dependencies via UV (with binarization extras)
+        env:
+          GIT_SSH_COMMAND: "ssh -i /tmp/deputydev_core_deploy -o IdentitiesOnly=yes"
         run: |
           python -m pip install --upgrade pip
           pip install uv
           uv sync --extra binarization
 
-      # 6) Build macOS .app with Nuitka
+      # 7) Build macOS .app with Nuitka
       - name: Build macOS executable with Nuitka
         shell: bash
+        env:
+          GIT_SSH_COMMAND: "ssh -i /tmp/deputydev_core_deploy -o IdentitiesOnly=yes"
         run: |
           set -e
-
           VERSION="${{ steps.get_version.outputs.version }}"
           ARCH="${{ matrix.arch }}"
 
@@ -63,16 +73,14 @@ jobs:
           EOF
           )
 
-          # Build with Nuitka
           nuitka --mode=app --macos-target-arch="$ARCH" \
             --include-data-files="$LIB_PATH=tree_sitter_languages/$(basename "$LIB_PATH")" \
             app/service.py
 
-          # Rename result
           mkdir -p output
           mv service.app "output/macos-${ARCH}-${VERSION}.app"
 
-      # 7) Upload to GitHub Artifacts
+      # 8) Upload to GitHub Artifacts
       - name: Upload macOS artifact
         uses: actions/upload-artifact@v4
         with:
