--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -105,7 +105,7 @@ jobs:
 
 
 
-          python3 -m nuitka --mode=app \
+          python -m nuitka --mode=app --show-progress \
             --include-package=tree_sitter_language_pack.bindings.dockerfile \
             --include-package=tree_sitter_language_pack.bindings.make \
             --include-package=tree_sitter_language_pack.bindings.cmake \
@@ -142,7 +142,7 @@ jobs:
           ARCH="x86_64"
 
 
-          python3 -m nuitka --mode=app \
+          python -m nuitka --mode=app --show-progress \
             --include-package=tree_sitter_language_pack.bindings.dockerfile \
             --include-package=tree_sitter_language_pack.bindings.make \
             --include-package=tree_sitter_language_pack.bindings.cmake \
