--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,11 @@ jobs:
       # 2 ▸ Extract version from the tag (strip leading “v”)
       - name: Determine version
         id: get_version
-        shell: bash
+        shell: pwsh
         run: |
-          VERSION="${{ github.event.release.tag_name }}"
-          VERSION="${VERSION#v}"
-          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
+          $version = "${{ github.event.release.tag_name }}"
+          $version = $version -replace "^v", ""
+          echo "version=$version" >> $env:GITHUB_OUTPUT
 
       # 3 ▸ Setup Python 3.11
       - name: Setup Python
@@ -38,76 +38,83 @@ jobs:
 
       # 4 ▸ Write the SSH deploy key from repo secret
       - name: Write deploy key
-        shell: bash
+        shell: pwsh
         run: |
-          echo "${{ secrets.DEPUTYDEV_CORE_ACCESS_KEY }}" > /tmp/deputydev_core_deploy
-          chmod 600 /tmp/deputydev_core_deploy
+          $keyPath = "$env:TEMP\deputydev_core_deploy"
+          Set-Content -Path $keyPath -Value "${{ secrets.DEPUTYDEV_CORE_ACCESS_KEY }}" -NoNewline
+          icacls $keyPath /inheritance:r /grant:r "$env:USERNAME:R"
 
       # 5 ▸ Trust github.com host key
       - name: Add github.com to known_hosts
-        shell: bash
+        shell: pwsh
         run: |
-          mkdir -p ~/.ssh
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
+          $sshDir = "$env:USERPROFILE\.ssh"
+          if (-not (Test-Path $sshDir)) {
+            New-Item -Path $sshDir -ItemType Directory | Out-Null
+          }
+          ssh-keyscan github.com | Out-File -FilePath "$sshDir\known_hosts" -Append
 
       # 6 ▸ Build .venv and install deps with uv
       - name: Build virtualenv and install deps
-        shell: bash
+        shell: pwsh
         env:
-          GIT_SSH_COMMAND: "ssh -i /tmp/deputydev_core_deploy -o IdentitiesOnly=yes"
+          GIT_SSH_COMMAND: "ssh -i $env:TEMP/deputydev_core_deploy -o IdentitiesOnly=yes"
         run: |
           python -m pip install --upgrade pip
           pip install uv
 
           uv venv .venv
 
-          source .venv/Scripts/activate
+          & .venv\Scripts\Activate.ps1
 
           # install runtime & binarization extras (pulls Nuitka)
           uv sync --extra binarization
 
-      # 6.5 ▸ Pre-install ccache (Windows-specific, optional)
+      # 7 ▸ Install ccache on Windows (optional)
       - name: Install ccache on Windows
-        shell: bash
+        shell: pwsh
         run: |
-          choco install -y ccache
+          if (Get-Command choco -ErrorAction SilentlyContinue) {
+            choco install -y ccache
+          } else {
+            Write-Host "choco not found; skipping ccache install"
+          }
 
-      # 7 ▸ Build standalone executable with Nuitka (Windows)
+      # 8 ▸ Build standalone executable with Nuitka (Windows)
       - name: Build Windows binary
-        shell: bash
+        shell: pwsh
         env:
-          GIT_SSH_COMMAND: "ssh -i /tmp/deputydev_core_deploy -o IdentitiesOnly=yes"
+          GIT_SSH_COMMAND: "ssh -i $env:TEMP/deputydev_core_deploy -o IdentitiesOnly=yes"
           NUITKA_CCACHE_AUTO_INSTALL: "yes"
         run: |
-          set -e
-          source .venv/Scripts/activate
+          & .venv\Scripts\Activate.ps1
 
-          VERSION="${{ steps.get_version.outputs.version }}"
-          ARCH="x86_64"
+          $VERSION = "${{ steps.get_version.outputs.version }}"
+          $ARCH = "x86_64"
 
-          python -m nuitka --mode=app --show-progress \
-            --include-package=tree_sitter_language_pack.bindings.dockerfile \
-            --include-package=tree_sitter_language_pack.bindings.make \
-            --include-package=tree_sitter_language_pack.bindings.cmake \
-            --include-package=tree_sitter_language_pack.bindings.python \
-            --include-package=tree_sitter_language_pack.bindings.javascript \
-            --include-package=tree_sitter_language_pack.bindings.typescript \
-            --include-package=tree_sitter_language_pack.bindings.java \
-            --include-package=tree_sitter_language_pack.bindings.c \
-            --include-package=tree_sitter_language_pack.bindings.cpp \
-            --include-package=tree_sitter_language_pack.bindings.go \
-            --include-package=tree_sitter_language_pack.bindings.rust \
-            --include-package=tree_sitter_language_pack.bindings.ruby \
-            --include-package=tree_sitter_language_pack.bindings.html \
-            --include-package=tree_sitter_language_pack.bindings.kotlin \
-            --include-package=tree_sitter_language_pack.bindings.json \
-            --include-package=tree_sitter_language_pack.bindings.tsx \
+          python -m nuitka --mode=app --show-progress `
+            --include-package=tree_sitter_language_pack.bindings.dockerfile `
+            --include-package=tree_sitter_language_pack.bindings.make `
+            --include-package=tree_sitter_language_pack.bindings.cmake `
+            --include-package=tree_sitter_language_pack.bindings.python `
+            --include-package=tree_sitter_language_pack.bindings.javascript `
+            --include-package=tree_sitter_language_pack.bindings.typescript `
+            --include-package=tree_sitter_language_pack.bindings.java `
+            --include-package=tree_sitter_language_pack.bindings.c `
+            --include-package=tree_sitter_language_pack.bindings.cpp `
+            --include-package=tree_sitter_language_pack.bindings.go `
+            --include-package=tree_sitter_language_pack.bindings.rust `
+            --include-package=tree_sitter_language_pack.bindings.ruby `
+            --include-package=tree_sitter_language_pack.bindings.html `
+            --include-package=tree_sitter_language_pack.bindings.kotlin `
+            --include-package=tree_sitter_language_pack.bindings.json `
+            --include-package=tree_sitter_language_pack.bindings.tsx `
             app/service.py
 
-          mkdir -p output
-          mv service.exe "output/windows-${ARCH}-${VERSION}.exe"
+          if (!(Test-Path "output")) { New-Item -Path "output" -ItemType Directory | Out-Null }
+          Move-Item -Path "service.exe" -Destination "output/windows-$ARCH-$VERSION.exe"
 
-      # 8 ▸ Upload the resulting artifact (Windows)
+      # 9 ▸ Upload the resulting artifact (Windows)
       - name: Upload Windows artifact
         uses: actions/upload-artifact@v4
         with:
